--- a/StarvingCodeMonkey/.classpath
+++ b/StarvingCodeMonkey/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/gwt-maps.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/cs310/GwtEarth3-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/cs310/gwt-maps-3.8.0/gwt-maps.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
