--- a/StarvingCodeMonkey/.classpath
+++ b/StarvingCodeMonkey/.classpath
@@ -3,11 +3,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Jim Qi/git/The-Cereal-Killers/StarvingCodeMonkey/war/WEB-INF/lib/GwtEarth3-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jim Qi/git/The-Cereal-Killers/StarvingCodeMonkey/war/WEB-INF/lib/gwt-maps.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jim Qi/Desktop/Workspace/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.9/appengine-java-sdk-1.8.9/lib/user/appengine-jsr107cache-1.8.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jim Qi/Desktop/Workspace/eclipse/plugins/com.google.appengine.eclipse.sdkbundle_1.8.9/appengine-java-sdk-1.8.9/lib/user/appengine-api-1.0-sdk-1.8.9.jar"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (1)"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-maps.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/GwtEarth3-1.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
